--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /* Your CSS code here. */
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 2px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+th{
+text-align:center
+}
+tr:nth-child(even){
+background-color: rgb(246, 248, 250);
+}
